# fit-mbot

./: .gitignore  CMakeLists.txt  Jamroot  README.md  Readme.txt  prebuild.py  project-config.jam  tbs.b2.py  tbs.jam
Camera/: .cproject
HAL.API/: .cproject  .project  CMakeLists.txt  Jamfile  jsBioRadar.js  jsCamera.js  jsMovement.js
HAL.API/definitions/: api.bat  api.sh  bioradar.xml  camera.xml  manipulator.xml  movement.xml  remote.xml  ultrasound.xml
HAL.API/include/HAL/: HALAPI.h
HAL.API/include/HAL/API/: BioRadar.h  BioRadarSvc_DBus.h  BioRadarSvc_Json.h  Camera.h  CameraSvc_DBus.h  CameraSvc_Json.h  Manipulator.h  ManipulatorClient.h  ManipulatorSvc_Json.h  Movement.h  MovementClient.h  MovementSvc_DBus.h  MovementSvc_Json.h  Remote.h  RemoteSvc_Json.h  UltraSound.h  UltraSoundSvc_Json.h  api.h
HAL.API/include/TSeries/Services/: Movement.h  MovementSvc_DBus.h
HAL.API/js/: Remote.js
HAL.API/src/: BioRadar.cpp  BioRadarSvc_DBus.cpp  BioRadarSvc_Json.cpp  Camera.cpp  CameraSvc_DBus.cpp  CameraSvc_Json.cpp  Manipulator.cpp  ManipulatorClient.cpp  ManipulatorSvc_Json.cpp  Movement.cpp  MovementClient.cpp  MovementSvc_DBus.cpp  MovementSvc_Json.cpp  Remote.cpp  RemoteSvc_Json.cpp  UltraSound.cpp  UltraSoundSvc_Json.cpp
HAL.API/src/Client/: BioRadar_DBus.h  BioRadar_Json.h  Camera_DBus.h  Camera_Json.h  Manipulator_Json.h  Movement_DBus.h  Movement_Json.h  Remote_Json.h  UltraSound_Json.h
HAL.API/src/Server/: BioRadar_DBus.h  BioRadar_Json.h  Camera_DBus.h  Camera_Json.h  Manipulator_Json.h  Movement_DBus.h  Movement_Json.h  Remote_Json.h  UltraSound_Json.h
HAL.CanModules/: .cproject  .project  CMakeLists.txt
HAL.CanModules/include/MBot/HW/: BioRadarModules.h  CameraModules.h  ManipulatorModules.h
HAL.CanModules/src/: HALService.cpp  HALService.h  IHALFactory.cpp  IHALFactory.h  main.cpp
HAL.CanModules/src/MBot/: BioRadarModules.cpp  CameraModules.cpp  ManipulatorModules.cpp
HAL.CanModules/src/Real/: BioRadar.cpp  BioRadar.h  Camera.cpp  Camera.h  HALFactory.cpp  HALFactory.h  Manipulator.cpp  Manipulator.h  ManipulatorModule.cpp  ManipulatorModule.h
HAL.CanModules/src/RoboCan/Communicaton/: NetChannel.cpp  NetClient.cpp  UsbChannel.cpp
HAL.CanModules/src/RoboCan/Task/: ConsumingDataModuleTask.cpp
HAL.RemoteClient/: CMakeLists.txt
HAL.RemoteClient/src/: main.cpp
TBS.Robo.RoboCan/: .cproject  .project  CMakeLists.txt
TBS.Robo.RoboCan/src/RoboCan/Communicaton/: AckMessage.cpp  CanMessage.cpp  DataMessage.cpp  IChannel.cpp  RoboCanMessage.cpp  RoboCanMessageData.cpp  StatusMessage.cpp
TBS.Robo.RoboCan/src/RoboCan/HW/: CanModule.cpp  CanNode.cpp  ICanModule.cpp  ICanNode.cpp  InternalCanModule.cpp
TBS.Robo.RoboCan/src/RoboCan/Task/: ModuleCommandTask.cpp  ModuleDataTask.cpp  ModuleStatusTask.cpp  ModuleTask.cpp
TBS.Services/: .cproject  .project  CMakeLists.txt  Jamfile  ReadMe.txt
TBS.Services/TBS.Services.Generator.lin/: makefile
TBS.Services/TBS.Services.Generator.win/: makefile
TBS.Services/TBS.Services.a.lin/: makefile
TBS.Services/TBS.Services.a.win/: makefile
TBS.Services/TBS.Services.dll.win/: makefile
TBS.Services/include/DotNet/: DotNetClient.h
TBS.Services/include/TBS/: TBSServices.h
TBS.Services/include/TBS/Services/: Introspection.h  Services.h  Types.h
TBS.Services/include/dbus-c++/: api.h  connection.h  dbus.h  debug.h  dispatcher.h  error.h  eventloop-integration.h  eventloop-win.h  eventloop.h  types.h  util.h
TBS.Services/include/dbusUseSystem/: dbus-arch-deps.h  winenum.h
TBS.Services/include/jsonrpc/: AbstractServerConnector.h  Convertor.h  ServiceHandlers.h  abstractauthenticator.h  abstractrequesthandler.h  client.h  clientconnector.h  errors.h  procedure.h  rpc.h  rpcprotocolclient.h  rpcprotocolserver.h  server.h  serverconnector.h  serverinterface.h  specificationparser.h  specificationwriter.h
TBS.Services/include/jsonrpc/connectors/: RawInterfaceClient.h  RawInterfaceServer.h  WsInterfaceClient.h  WsInterfaceServer.h  helpers.h  httpclient.h  httpinterfaceclient.h  httpinterfaceserver.h  httpinterfaceserverjsonp.h  httpserver.h
TBS.Services/src/DotNet/: DotNetClient.cpp
TBS.Services/src/TBS/: Services.cpp
TBS.Services/src/TBS/DBus/: ConnectionWrapper.cpp  DBusCommChannelHolder.cpp  DBusServices.cpp  Server.cpp
TBS.Services/src/TBS/Json/: JsonServices.cpp  JsonServicesImpl.cpp
TBS.Services/src/dbuscpp/: ConnectionManager.cpp  ConnectionManager.h  connection.cpp  connection_p.h  debug.cpp  dispatcher.cpp  dispatcher_p.h  error.cpp  eventloop-integration.cpp  eventloop-integration.cpp.lin  eventloop-lin.cpp  eventloop-win.cpp  eventloop.cpp  eventloop.cpp.lin  interface.cpp  internalerror.h  introspection.cpp  message.cpp  message_p.h  object.cpp  pendingcall.cpp  pendingcall_p.h  pipe.cpp  pipe.cpp.nopipe  property.cpp  server.cpp  server_p.h  types.cpp  winenum.h
TBS.Services/src/jsonrpc/: Convertor.cpp  ServiceHandlers.cpp  client.cpp  clientconnector.cpp  errors.cpp  exception.cpp  procedure.cpp  rpcprotocolclient.cpp  rpcprotocolserver.cpp  server.cpp  serverconnector.cpp  serverinterface.cpp  specificationparser.cpp  specificationwriter.cpp
TBS.Services/src/jsonrpc/connectors/: HttpServerHelpers.cpp  HttpServerHelpers.h  RawInterfaceClient.cpp  RawInterfaceServer.cpp  WsInterfaceClient.cpp  WsInterfaceServer.cpp  httpclient.cpp  httpinterfaceclient.cpp  httpinterfaceserver.cpp  httpinterfaceserverjsonp.cpp  httpserver.cpp
TBS.Services/test/: HWIO.h  HWIOSvc_DBus.cpp  HWIOSvc_DBus.h  HWIOSvc_Json.cpp  HWIOSvc_Json.h  main.cpp
TBS.Services/test/Client/: HWIO_DBus.h  HWIO_Json.h
TBS.Services/test/Server/: HWIO_DBus.h  HWIO_Json.h
TBS.Services/tools/: main.cpp
TBS.Services/tools/Generator/: Generator.cpp  Generator.h  InterfaceGenerator.cpp  InterfaceGenerator.h  InterfaceTemplate.h  clienttemplate.h  definitions.h
TBS.Services/tools/Generator/DBus/: DBusClientGenerator.cpp  DBusClientGenerator.h  DBusClientTemplate.h  DBusHelpers.cpp  DBusHelpers.h  DBusServerGenerator.cpp  DBusServerGenerator.h  DBusServerTemplate.h  DBusServiceGenerator.cpp  (+2 more)
(+423 files in other folders)
